src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

.App {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}


html {
  scroll-behavior: smooth;
}

body {
  max-width: 100vw;
  overflow-x: hidden;
}

nav {
  height: 80px;
  display: flex;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
  background-color: white;
  position: relative;

}

img {
  width: 100%;
  height: 100%
   }

p {
  line-height: 1.5;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

ul {
  display: flex;
}

li {
  list-style-type: none;
}

h1 {
  font-size: 56px;
  color: #7342d6;
  margin-bottom: 24px;
  text-align: center;
  line-height: 1;
}

h2 {
  font-size: 32px;
  margin-bottom: 32px;
  text-align: center;
}

button {
  cursor: pointer;
}

button:active {
  transform: translateY(1px);
}

.btn {
  background-color: #7342d6;
  color: white;
  padding: 12px 24px;
  font-size: 20px;
  border-radius: 4px;
  border: none;
}

.purple {
  color: #7342d6;
}

.logo {
  width: 160px;
}

.nav__container {
  width: 100%;
  max-width: 1200px;
  padding: 0 24px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
}

.nav__icon {
  display: flex;
  align-items: center;
  justify-content: center;
  color: #7342d6;
  font-size: 20px;
  position: relative;
  margin-left: 8px;
}


.nav__link {
  margin-left: 16px;
  text-decoration: none;
  font-size: 20px;
  color: #7342d6;
  font-weight: bold;
  padding: 8px;
}

.nav__link:hover {
  text-decoration: underline;
}

.nav__link--primary {
  border: 2px solid #7342d6;
  border-radius: 4px;
}

.nav__link--primary:hover {
  text-decoration: none;
}

.nav__actions {
  display: flex;
  align-items: center;
  gap: 16px;
}

.cart__length {
  position: relative;
  top: -8px;
  right: -12px;

  width: 18px;
  height: 18px;

  background-color: red;
  color: white;

  border-radius: 50%;

  display: flex;
  align-items: center;
  justify-content: center;

  font-size: 12px;
  font-weight: 700;
}

.btn__menu {
  background: transparent;
  border: none;
  font-size: 28px;
  color: #7342d6;
  display: none;
  cursor: pointer;
}

.menu__backdrop {
  position: absolute;
  background-color: #242424;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
  visibility: hidden;
  transition: all 300ms ease;
  opacity: 0;
  transform: translate(100%);
}

.menu--open {
  max-height: 100vh;
  overflow: hidden;
}

.menu--open .menu__backdrop {
  visibility: visible;
  opacity: 1;
  transform: translate(0);
}

.menu__links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.menu__list {
  padding: 32px 0;
}

.menu__link {
  color: white;
  font-size: 40px;
}

.btn__menu--close {
  position: absolute;
  top: 10px;
  right: 20px;
  padding: 8px;
  color: white;
}

#landing {
  background-color: rgba(115, 66, 214, 0.1);
}

header {
  min-height: calc(100vh - 80px);
  overflow: hidden;
}

.header__container {
  padding-top: 32px;
  width: 100%;
  max-width: 720px;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 32px
}

.header__description {
  display: flex; 
  flex-direction: column;
  align-items: center;
}

.header__img--wrapper {
  padding: 20px;
  z-index: 2;
  max-width: 600px;
  margin: 0 auto;
}

.header__img--wrapper img {
  max-height: 35vh;
  object-fit: contain;
}

.container {
  padding: 56px 0;
}

.row {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.row__column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.no-cursor {
  cursor: not-allowed;
}

#highlights {
  position: relative;
  }

#highlights:after,
#highlights:before {
   background-image: url("./assets/wave.svg");
  content: "";
  position: absolute;
  width: 100%;
  height: 12vw;
  left: 0;
  background-size: cover;
  background-repeat: no-repeat;
  z-index: 0;
}

#highlights:before {
  transform: translateY(-100%);
  top: 0;
}

#highlights:after {
  transform: translateY(100%) rotate(180deg);
  bottom: 0;
}

#highlights .container {
  position: relative;
  z-index: 1;
}

.highlight__wrapper {
  display: flex;
  flex-wrap: wrap;
}

.highlight {
  padding: 0 24px;
  width: calc(100% / 3);
  display: flex;
  align-items: center;
  flex-direction: column;
}

.highlight__para {
  text-align: center;
  max-width: 280px;
}

.highlight__img {
  border: 2px solid #7342d65d;
  color: #7342d6;
  width: 100px;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
  font-size: 32px;
  margin-bottom: 24px;
}

.highlight__subtitle {
  font-size: 20px;
  margin-bottom: 16px;
  text-align: center;
}

#features {
  padding-top: 8vw;
  background-color: rgba(115, 66, 214, 0.1);
}

.books {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -24px;
}

.book {
  width: 25%;
  padding: 24px;
   transition: all 300ms ease;
}

.book:hover {
  transform: translateY(-4px);
}

#features .books {
  justify-content: center;
}

#features .book {
  width: calc(100% / 3);
  max-width: 280px;
}

.book__img {
  max-height: 380px;
  transition: all 300ms ease;
  cursor: not-allowed;
}

.book__img--skeleton {
  width: 100%;
  max-width: 250px;
  height: 320px;
  background-color: #e5e7eb;
  margin-bottom: 8px;
}

.skeleton {
  background-color: rgb(227, 227, 227) !important;
  margin-bottom: 8px;
}

.book__title--skeleton {
  height: 21px;
  width: 100%;
}

.book__rating--skeleton {
  width: 100px;
  height: 19px;
}

.book__price--skeleton {
  width : 200px;
  height: 19px;
}

.book__link {
  color: #242424;
}

.book__img--wrapper {
  margin-bottom: 8px;
  border-radius: 4px;
  overflow: hidden;
  display: flex;
}

.book:hover .book__img {
  transform: scale(1.03);
}
/* ... */

